# privesc-atlas

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/atlas/: __init__.py  cli.py  loader.py  models.py  policy.py  render.py  sigma_lint.py
src/atlas/templates/: technique.md.j2
techniques/ai-agent/mcp-tool-poisoning/: README.md  technique.yaml
techniques/ai-agent/mcp-tool-poisoning/detections/sigma/: agent_toolcall_escalation.yml
techniques/ai-agent/mcp-tool-poisoning/poc/: demo.py
techniques/linux/sudo-nopasswd/: README.md  poc.sh  technique.yaml
techniques/linux/sudo-nopasswd/detections/osquery/: linux_sudo_nopasswd.conf
techniques/linux/sudo-nopasswd/detections/sigma/: linux_sudo_nopasswd.yml
techniques/macos/launch-agents/: README.md  poc.sh  poc_reverse_shell.sh  technique.yaml
techniques/macos/launch-agents/detections/osquery/: macos_launch_agents.conf
techniques/macos/launch-agents/detections/sigma/: macos_launch_agents.yml
techniques/macos/launch-daemon/: README.md  poc.sh  technique.yaml
techniques/macos/launch-daemon/detections/osquery/: macos_launch_daemon.conf
techniques/macos/launch-daemon/detections/sigma/: macos_launch_daemon.yml
techniques/windows/unquoted-service-path/: README.md  exploit.py  technique.yaml
techniques/windows/unquoted-service-path/detections/sigma/: unquoted_service_path.yml
tests/: conftest.py  test_cli.py  test_loader.py  test_models.py  test_policy.py  test_render.py  test_sigma_lint.py
